Imagenes blazy, tarjetas eliminadas

--- a/acercade.html
+++ b/acercade.html
@@ -79,9 +79,10 @@
       <main>
         <section class="well center bg-color">
           <div class="container">
-            <h2>¿Quiénes Somos?</h2><img src="images/page-2_img01.jpg" alt="">
-            <h5>Nosotros</h5>
-            <p class="txt1">Maquinaria J.McPRIS Es una empresa dedicada a apoyar al sector productivo y de servicios en México.
+            <h2>¿Quiénes Somos?</h2><br><img src="images/page-2_img01.jpg" alt="">
+            <br><br>
+            <h3>Nosotros</h3>
+            <p class="txt1" style="font-size: 18px;color: #776767;">Maquinaria J.McPRIS Es una empresa dedicada a apoyar al sector productivo y de servicios en México.
               Ofrecemos grúas y camiones usados en excelentes condiciones con sistema hidráulico, utilizados en la elevación y manipulación de cargas, distribuyéndolos en empresas enfocadas al  transporte, obras públicas, construcción, permitiendo simplificar el trabajo.
               Ponemos a su disposición grúas articuladas sueltas de todas las capacidades en marcas líderes mundiales como  Hiab, Fassi, HMF, National, Palfinger, Copma, IMT, Tirre y Cormach; para que sean colocadas sobre su camión, si así lo desea, dentro de nuestras instalaciones.
             </p>
@@ -92,12 +93,12 @@
             <ul class="row product-list">
               <li class="grid_6">
                 <div class="icon2 fa-user"></div>
-                <h5>Visión</h5>
+                <h4>Visión</h4>
                 <p align="justify">brindar soluciones especializadas y confiables en el manejo y traslado de maquinaria pesada, montajes, etc.  de acuerdo a los requerimientos y necesidades especificas de cada cliente, afirmando la solidez y prestigio de la empresa en su liderazgo profesional y su responsabilidad social.</p>
               </li>
               <li class="grid_6">
                 <div class="icon2 fa-wrench"></div>
-                <h5>Misión</h5>
+                <h4>Misión</h4>
                 <p align="justify">
                   Todas nuestras grúas son revisados por especialistas dentro denuestro taller, en donde pasan un proceso de mantenimiento y pruebas  para finalmente podérlas entregar en las mejores condiciones.
                   <br>Contamos con camiones, grúas articuladas y telescópicas ya instaladas, con los tramites necesarios para facilitar la compra de nuestras unidades.
