--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <div data-u="slides" style="cursor: default; position: relative; top: 0px; left: 0px; width: 1300px; height: 500px; overflow: hidden;">
                   <div data-p="225.00">
                       <img data-u="image" src="images/page-1_slide01.jpg" />
-                      <div style="position: absolute; top: 16%; left: 405px; width: 480px; height: 120px; font-size: 50px; color: #333; line-height: 60px;text-align: center;">La mejor opción en grúas industriales,<br>¡Llámanos!</div>
+                     <!-- <div style="position: absolute; top: 16%; left: 405px; width: 480px; height: 120px; font-size: 50px; color: #333; line-height: 60px;text-align: center;">La mejor opción en grúas industriales,<br>¡Llámanos!</div>-->
                   </div>
                   <div data-p="225.00" style="display: none;">
                       <img data-u="image" src="images/page-1_slide02.jpg" />
@@ -189,62 +189,33 @@
               <span data-u="arrowright" class="jssora22r" style="top:0px;right:8px;width:40px;height:58px;" data-autocenter="2"></span>
           </div>
         </section>
-        <section class="bg-color">
-          <div class="container">
-            <div class="banner_wr">
-              <ul class="banner">
-                <li class="presentacion">
-                  <h3 >Bienvenido</h3>
-                  <h6>¿Quiénes Somos?</h6>
-                  <p>Maquinaria J.McPRIS Es una empresa dedicada a apoyar al sector productivo y de servicios en México. Ofrecemos grúas y camiones usados en excelentes condiciones con sistema hidráulico...</p><a href="acercade.html" class="btn">Leer más</a><br><br>
-                </li>
-                <li class="presentacion">
-                  <h3 >Productos</h3>
-                  <h6>¿Qué ofrecemos?</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="productos.html" class="btn">Leer más</a><br><br>
-                </li>
-                <li class="presentacion">
-                  <h3 >Servicios</h3>
-                  <h6>Lorem ipsum dolor</h6>
-                  <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="servicios.html" class="btn">Leer más</a><br><br>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
         <section class="well center bg-color">
           <div class="container">
-            <h2>Plentiful stone supply</h2>
+            <h2>La mejor opción en grúas industriales</h2>
             <ul class="row product-list">
               <li class="grid_2">
                 <div class="icon fl-glypho-folded-map"></div>
                 <h5>Lorem ipsum dolor sit</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
               </li>
               <li class="grid_2">
                 <div class="icon fl-glypho-nut4"></div>
                 <h5>Lorem ipsum dolor sit</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
               </li>
               <li class="grid_2">
                 <div class="icon fl-glypho-flask"></div>
                 <h5>Lorem ipsum dolor sit</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
               </li>
               <li class="grid_2">
                 <div class="icon fl-glypho-truck69"></div>
                 <h5>Lorem ipsum dolor sit</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
               </li>
               <li class="grid_2">
                 <div class="icon fl-glypho-speech-bubble20"></div>
                 <h5>Lorem ipsum dolor sit</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
               </li>
               <li class="grid_2">
                 <div class="icon fl-glypho-directional-sign10"></div>
                 <h5>Lorem ipsum dolor sit</h5>
-                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit</p>
               </li>
             </ul>
           </div>
