--- a/servicios.html
+++ b/servicios.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js" charset="utf-8"></script>
     <script src="js/jquery-migrate-1.2.1.js"></script>
     <script src="js/device.min.js"></script>
   </head>
@@ -46,7 +47,7 @@
       <header>
         <div id="stuck_container" class="stuck_container">
           <div class="container">
-            <a href="index.html"><img src="images/logo.png" alt=""/></a>
+            <a href="index.html"><img src="images/logo.png" data-src-small="small-image.jpg" alt="" /></a>
             <nav class="nav">
               <ul data-type="navbar" class="sf-menu">
                 <li><a href="index.html">Inicio</a>
@@ -81,13 +82,13 @@
           <div class="container">
             <h2>Servicios</h2>
             <div class="row">
-              <figure class="grid_6 figure2"><img src="images/page-3_img01.jpg" alt="">
+              <figure class="grid_6 figure2"><img src="images/page-3_img01.jpg" data-src-small="small-image.jpg" alt="" >
                 <figcaption>
                   <h5 data-equal-group="1">RENTA DE GRÚAS INDUSTRIALES, MANIOBRAS Y SERVICIO DE TRASLADOS</h5><br><br>
                   <!-- <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p> -->
                 </figcaption>
               </figure>
-              <figure class="grid_6 figure2"><img src="images/page-3_img02.jpg" alt="">
+              <figure class="grid_6 figure2"><img src="images/page-3_img02.jpg" data-src-small="small-image.jpg" alt="" >
                 <figcaption>
                   <h5 data-equal-group="1">VENTA DE GRÚAS INDUSTRIALES, MAQUINARIA Y TRACTOCAMIONES</h5><br><br>
                   <!-- <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p> -->
@@ -119,53 +120,53 @@
           <div class="container">
             <h2>Galería</h2>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/1.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/2.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/3.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/1.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/2.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/3.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/5.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/6.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/4.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/5.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/6.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/4.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/7.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/8.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/9.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/7.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/8.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/9.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/10.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/11.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/12.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/10.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/11.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/12.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/13.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/14.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/15.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/13.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/14.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/15.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/16.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/17.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/18.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/16.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/17.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/18.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/19.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/20.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/21.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/19.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/20.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/21.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/19.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/20.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/22.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/19.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/20.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/22.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/23.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/24.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/25.jpg" alt=""></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/23.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/24.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/25.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/26.jpg" alt=""></a></div>
-              <div class="grid_4 relatividad"><a class="img editor"><img src="images/Galeria/27.jpg" alt=""></a></div>
+              <div class="grid_4 "><a class="img "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/26.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 "><a class="img "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/27.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
           </div>
         </section>
@@ -218,4 +219,9 @@
       </footer>
     </div>
     <script src="js/script.js"></script>
+    <script >
+    var bLazy = new Blazy({
+  // options
+});
+    </script>
   </body></html>
