--- a/servicios.html
+++ b/servicios.html
@@ -36,9 +36,11 @@
     <meta property="business:hours:end" content="15:00" />
     <link rel="icon" href="images/icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/lightbox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blazy/1.8.2/blazy.min.js" charset="utf-8"></script>
+    <script src="js/lightbox-plus-jquery.min.js"></script>
     <script src="js/jquery-migrate-1.2.1.js"></script>
     <script src="js/device.min.js"></script>
   </head>
@@ -120,53 +122,48 @@
           <div class="container">
             <h2>Galería</h2>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/1.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/2.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/3.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/1.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/1.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/2.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/2.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/3.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/3.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/5.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/6.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/4.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/4.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/5.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/5.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/6.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/6.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/4.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/7.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/8.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/9.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/7.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/7.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/8.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/8.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/9.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/9.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/10.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/11.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/12.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/10.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/10.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/11.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/11.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/12.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/12.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/13.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/14.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/15.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/13.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/13.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/14.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/14.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/15.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/15.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/16.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/17.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/18.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/16.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/16.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/17.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/17.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/18.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/18.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/19.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/20.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/21.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/19.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/19.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/20.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/20.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/21.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/21.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/19.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/20.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/22.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/23.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/23.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/24.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/24.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 relatividad"><a class="img editor example-image-link" href="images/Galeria/25.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/25.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
             <div class="row off1">
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/23.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/24.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 relatividad"><a class="img editor "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/25.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-            </div>
-            <div class="row off1">
-              <div class="grid_4 "><a class="img "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/26.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
-              <div class="grid_4 "><a class="img "><img class="b-lazy" src="images/place.png" data-src="images/Galeria/27.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 "><a class="img  example-image-link" href="images/Galeria/26.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/26.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
+              <div class="grid_4 "><a class="img  example-image-link" href="images/Galeria/27.jpg" data-lightbox="example-set"><img class="b-lazy" src="images/place.png" data-src="images/Galeria/27.jpg" data-src-small="small-image.jpg" alt="" ></a></div>
             </div>
           </div>
         </section>
